--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
   "name": "telomere",
+  "version": "0.1.3",
   "description": "A WASM-powered library to cap incomplete JSON streams.",
-  "version": "0.1.2",
   "author": "Hamish Gilkison <hamishgilkison@gmail.com>",
   "license": "MIT",
   "type": "module",
-  "module": "./dist/telomere.js",
   "exports": {
     ".": {
-      "types": "./dist/lib.d.ts",
-      "import": "./dist/telomere.js",
-      "default": "./dist/telomere.js"
+      "import": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    },
+    "./wasm": {
+      "import": "./dist/telomere_json_wasm.js"
     }
   },
+  "types": "./dist/index.d.ts",
   "files": [
     "dist"
   ],
@@ -24,8 +26,8 @@
   "scripts": {
     "dev": "npm run build:wasm:release && vite",
     "build:wasm:release": "wasm-pack build --release ./telomere-json-wasm --target web --out-dir src/pkg",
-    "postbuild": "node buildScripts/postbuild.js",
     "build": "npm run build:wasm:release && vite build && npm run postbuild",
+    "postbuild": "node buildScripts/postbuild.js",
     "pretest": "npm run build:wasm:release && npm run postbuild",
     "test": "vitest run"
   },
