--- a/telomere-json-wasm/Cargo.toml
+++ b/telomere-json-wasm/Cargo.toml
@@ -8,10 +8,9 @@ authors = ["Your Name <you@example.com>"]
 crate-type = ["cdylib"]
 
 [dependencies]
-# The core dependency for WASM bindings.
 wasm-bindgen = "0.2"
 
-telomere_json = "0.1.0" # If published
+telomere_json = "0.1.1"
 serde = { version = "1.0.219", features = ["derive"] }
 serde-wasm-bindgen = "0.6.5"
 js-sys = "0.3.77"
@@ -22,3 +21,15 @@ optional = true
 
 [features]
 default = ["console_error_panic_hook"]
+
+[profile.release]
+opt-level = "s"
+
+lto = true
+
+codegen-units = 1
+
+panic = "abort"
+
+[package.metadata.wasm-pack.profile.release]
+wasm-opt = ["-Os", "--strip-debug"]
